<resources>
    <string name="app_name">MAXITECH</string>
    <string name="app_title">Tecnología a tu alcance</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Login</string>
    <string name="error_password">Contraseña tiene que tener 6 caracteres como minimo.</string>
    <string name="text_login">Recupere su contraseña si la ólvido</string>
    <string name="text_card">Teclado</string>
</resources>